--- a/index.html
+++ b/index.html
@@ -314,7 +314,7 @@
                 <div class="row row-space-2 margin-b-20">
                     <div class="col-sm-4 sm-margin-b-2">
                         <div class="wow fadeInLeft" data-wow-duration=".3" data-wow-delay=".3s">
-                            <div class="card" data-height="height">
+                            <div class="card " data-height="height">
                                 <div class="card-element text-center">
                                     <i class="card-icon icon-screen-tablet"></i>
                                 </div>
@@ -329,7 +329,7 @@
                     </div>
                     <div class="col-sm-4 sm-margin-b-2">
                         <div class="wow fadeInLeft" data-wow-duration=".3" data-wow-delay=".2s">
-                            <div class="card" data-height="height">
+                            <div class="card " data-height="height">
                                 <div class="card-element text-center">
                                     <i class="card-icon icon-speedometer"></i>
                                 </div>
@@ -345,7 +345,7 @@
                     </div>
                     <div class="col-sm-4">
                         <div class="wow fadeInLeft" data-wow-duration=".3" data-wow-delay=".1s">
-                            <div class="card" data-height="height">
+                            <div class="card " data-height="height">
                                 <div class="card-element text-center">
                                     <i class="card-icon icon-badge"></i>
                                 </div>
@@ -363,7 +363,7 @@
                 <div class="row row-space-2 margin-b-20">
                     <div class="col-sm-4 sm-margin-b-2">
                         <div class="wow fadeInLeft" data-wow-duration=".3" data-wow-delay=".4s">
-                            <div class="card" data-height="height">
+                            <div class="card " data-height="height">
                                 <div class="card-element text-center">
                                     <i class="card-icon icon-notebook"></i>
                                 </div>
@@ -379,7 +379,7 @@
                     </div>
                     <div class="col-sm-4 sm-margin-b-2">
                         <div class="wow fadeInLeft" data-wow-duration=".3" data-wow-delay=".5s">
-                            <div class="card" data-height="height">
+                            <div class="card " data-height="height">
                                 <div class="card-element text-center">
                                     <i class="card-icon icon-speedometer"></i>
                                 </div>
@@ -395,7 +395,7 @@
                     </div>
                     <div class="col-sm-4">
                         <div class="wow fadeInLeft" data-wow-duration=".3" data-wow-delay=".6s">
-                            <div class="card" data-height="height">
+                            <div class="card " data-height="height">
                                 <div class="card-element text-center">
                                     <i class="card-icon icon-badge"></i>
                                 </div>
@@ -414,7 +414,7 @@
                 <div class="row row-space-2">
                     <div class="col-sm-4 sm-margin-b-2">
                         <div class="wow fadeInLeft" data-wow-duration=".3" data-wow-delay=".4s">
-                            <div class="card" data-height="height">
+                            <div class="card " data-height="height">
                                 <div class="card-element text-center">
                                     <i class="card-icon icon-notebook"></i>
                                 </div>
@@ -431,7 +431,7 @@
                     </div>
                     <div class="col-sm-4">
                         <div class="wow fadeInLeft" data-wow-duration=".3" data-wow-delay=".6s">
-                            <div class="card" data-height="height">
+                            <div class="card " data-height="height">
                                 <div class="card-element text-center">
                                     <i class="card-icon icon-badge"></i>
                                 </div>
@@ -447,7 +447,7 @@
                     </div>
                     <div class="col-sm-4 sm-margin-b-2">
                         <div class="wow fadeInLeft" data-wow-duration=".3" data-wow-delay=".5s">
-                            <div class="card" data-height="height">
+                            <div class="card " data-height="height">
                                 <div class="card-element text-center">
                                     <i class="card-icon icon-speedometer"></i>
                                 </div>
@@ -474,18 +474,15 @@
                         <h2>Plataforma Gestión Energética - ¿Para qué se utiliza?</h2>
                     </div>
                 </div>
-                <div class="row row-space-1 margin-b-2">
-                    <div class="col-sm-3 sm-margin-b-2">
+                <div class="row box-container">
+                    <div class="col-sm-3 padding-r-5 md-margin-b-5">
                         <div class="wow fadeInLeft" data-wow-duration=".3" data-wow-delay=".3s">
                             <div class="service-faq3" data-height="height">
                                 <div class="service-info-faq3 text-center">
                                     <h3>Monitorización en tiempo real</h3>
                                     <div class="service-element">
-                                        <img class="img-responsive img-center"
-                                            src="img/faq/3_Plataforma-Gestion-Energetica-Para-Que-Se-Utiliza/monitorizacion-en-tiempo-real.png"
-                                            alt="monitorizacion-en-tiempo-real">
+                                        <span class="iconify" data-icon="bx:bx-barcode-reader" data-inline="false" style="color: '#17bed27a';"></span>
                                     </div>
-                                    </p>
                                     <p class="margin-b-5">Monitorización en tiempo real de las
                                         variables energéticas</p>
                                 </div>
@@ -493,34 +490,28 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-sm-3 sm-margin-b-2">
+                    <div class="col-sm-3 padding-r-5 md-margin-b-5">
                         <div class="wow fadeInLeft" data-wow-duration=".3" data-wow-delay=".2s">
                             <div class="service-faq3" data-height="height">
                                 <div class="service-info-faq3 text-center">
                                     <h3>Análisis de datos energeticos</h3>
-                                    <div class="service-element-faq3">
-                                        <img class="img-responsive img-center"
-                                            src="img/faq/3_Plataforma-Gestion-Energetica-Para-Que-Se-Utiliza/analisis-de-datos-energeticos.png"
-                                            alt="analisis-de-datos-energeticos">
+                                    <div class="service-element">
+                                        <span class="iconify" data-icon="bx:bx-atom" data-inline="false" style="color: '#17bed27a';"></span>
                                     </div>
-                                    </p>
                                     <p class="margin-b-5">Análisis del perfil de consumo</p>
                                 </div>
                                 <a href="#" class="content-wrapper-link"></a>
                             </div>
                         </div>
                     </div>
-                    <div class="col-sm-3">
+                    <div class="col-sm-3 padding-r-5 md-margin-b-5">
                         <div class="wow fadeInLeft" data-wow-duration=".3" data-wow-delay=".1s">
                             <div class="service-faq3" data-height="height">
                                 <div class="service-info-faq3 text-center">
                                     <h3>Gestión de servicios energeticos</h3>
-                                    <div class="service-element-faq3">
-                                        <img class="img-responsive img-center"
-                                            src="img/faq/3_Plataforma-Gestion-Energetica-Para-Que-Se-Utiliza/gestion-de-servicios-energeticos.png"
-                                            alt="gestion-de-servicios-energeticos">
+                                    <div class="service-element">
+                                        <span class="iconify" data-icon="bx:bx-analyse" data-inline="false" style="color: '#17bed27a';"></span>
                                     </div>
-                                    </p>
                                     <p class="margin-b-5">Elaboración de facturas
                                         Gestión del portfolio de
                                         suministros/instalaciones</p>
@@ -529,17 +520,14 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-sm-3">
+                    <div class="col-sm-3 padding-r-5 md-margin-b-5">
                         <div class="wow fadeInLeft" data-wow-duration=".3" data-wow-delay=".1s">
                             <div class="service-faq3" data-height="height">
                                 <div class="service-info-faq3 text-center">
                                     <h3>Control para el sector energético</h3>
-                                    <div class="service-element-faq3">
-                                        <img class="img-responsive img-center"
-                                            src="img/faq/3_Plataforma-Gestion-Energetica-Para-Que-Se-Utiliza/control-para-el-sector-energetico.png"
-                                            alt="control-para-el-sector-energetico">
+                                    <div class="service-element">
+                                        <span class="iconify" data-icon="bx:bx-bitcoin" data-inline="false" style="color: '#17bed27a';"></span>
                                     </div>
-                                    </p>
                                     <p class="margin-b-5">Previsión de costos de facturas Chequeo del consumo
                                         mensual</p>
                                 </div>
@@ -574,7 +562,7 @@
     <!-- End FAQ4 -->
     <!-- FAQ5 -->
     <div id="FAQ5:requirenments-to-access-platform">
-        <div class="requirenments-to-access-platform g-margin-t-15--xs g-padding-y-80--xs g-padding-y-125--sm">
+        <div class="requirenments-to-access-platform content-lg container g-margin-t-15--xs g-padding-y-80--xs g-padding-y-125--sm">
             <div class="row margin-b-40">
                 <div class="col-sm-12">
                     <h2>Plataforma Gestión Energética - ¿Qué se necesita para acceder a la plataforma?</h2>
