--- a/index.html
+++ b/index.html
@@ -474,8 +474,8 @@
                         <h2>Plataforma Gestión Energética - ¿Para qué se utiliza?</h2>
                     </div>
                 </div>
-                <div class="row box-container">
-                    <div class="col-sm-3 padding-r-5 md-margin-b-5">
+                <div class="row">
+                    <div class="col-sm-3 col-md-12 col-xs-12 card">
                         <div class="wow fadeInLeft" data-wow-duration=".3" data-wow-delay=".3s">
                             <div class="service-faq3" data-height="height">
                                 <div class="service-info-faq3 text-center">
@@ -483,14 +483,14 @@
                                     <div class="service-element">
                                         <span class="iconify" data-icon="bx:bx-barcode-reader" data-inline="false" style="color: '#17bed27a';"></span>
                                     </div>
-                                    <p class="margin-b-5">Monitorización en tiempo real de las
+                                    <p>Monitorización en tiempo real de las
                                         variables energéticas</p>
                                 </div>
                                 <a href="#" class="content-wrapper-link"></a>
                             </div>
                         </div>
                     </div>
-                    <div class="col-sm-3 padding-r-5 md-margin-b-5">
+                    <div class="col-sm-3 col-md-12 col-xs-12 card">
                         <div class="wow fadeInLeft" data-wow-duration=".3" data-wow-delay=".2s">
                             <div class="service-faq3" data-height="height">
                                 <div class="service-info-faq3 text-center">
@@ -498,13 +498,15 @@
                                     <div class="service-element">
                                         <span class="iconify" data-icon="bx:bx-atom" data-inline="false" style="color: '#17bed27a';"></span>
                                     </div>
-                                    <p class="margin-b-5">Análisis del perfil de consumo</p>
+                                    <p>Análisis del perfil de consumo</p>
                                 </div>
                                 <a href="#" class="content-wrapper-link"></a>
                             </div>
                         </div>
                     </div>
-                    <div class="col-sm-3 padding-r-5 md-margin-b-5">
+                </div>
+                <div class="row">
+                    <div class="col-sm-3 col-md-12 col-xs-12 card">
                         <div class="wow fadeInLeft" data-wow-duration=".3" data-wow-delay=".1s">
                             <div class="service-faq3" data-height="height">
                                 <div class="service-info-faq3 text-center">
@@ -512,7 +514,7 @@
                                     <div class="service-element">
                                         <span class="iconify" data-icon="bx:bx-analyse" data-inline="false" style="color: '#17bed27a';"></span>
                                     </div>
-                                    <p class="margin-b-5">Elaboración de facturas
+                                    <p>Elaboración de facturas
                                         Gestión del portfolio de
                                         suministros/instalaciones</p>
                                 </div>
@@ -520,7 +522,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-sm-3 padding-r-5 md-margin-b-5">
+                    <div class="col-sm-3 col-md-12 col-xs-12 card">
                         <div class="wow fadeInLeft" data-wow-duration=".3" data-wow-delay=".1s">
                             <div class="service-faq3" data-height="height">
                                 <div class="service-info-faq3 text-center">
@@ -528,7 +530,7 @@
                                     <div class="service-element">
                                         <span class="iconify" data-icon="bx:bx-bitcoin" data-inline="false" style="color: '#17bed27a';"></span>
                                     </div>
-                                    <p class="margin-b-5">Previsión de costos de facturas Chequeo del consumo
+                                    <p>Previsión de costos de facturas Chequeo del consumo
                                         mensual</p>
                                 </div>
                                 <a href="#" class="content-wrapper-link"></a>
