--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
                     </div>
                 </div>
                 <div class="row">
-                    <div class="col-sm-4 g-margin-b-30--xs g-margin-b-0--md">
+                    <div class="col-sm-4 margin-b-20">
                         <article class="article g-box-shadow__dark-lightest">
                             <div class="wow zoomIn animated" data-wow-duration=".3" data-wow-delay=".1s"
                                 style="visibility: visible; animation-delay: 0.1s; animation-name: zoomIn;">
@@ -193,7 +193,7 @@
                             </div>
                         </article>
                     </div>
-                    <div class="col-sm-4 g-margin-b-30--xs g-margin-b-0--md">
+                    <div class="col-sm-4 margin-b-20">
                         <article class="article g-box-shadow__dark-lightest">
                             <div class="wow zoomIn animated" data-wow-duration=".3" data-wow-delay=".1s"
                                 style="visibility: visible; animation-delay: 0.1s; animation-name: zoomIn;">
@@ -226,7 +226,7 @@
                             </div>
                         </article>
                     </div>
-                    <div class="col-sm-4 g-margin-b-30--xs g-margin-b-0--md">
+                    <div class="col-sm-4 margin-b-20">
                         <article class="article g-box-shadow__dark-lightest">
                             <div class="wow zoomIn animated" data-wow-duration=".3" data-wow-delay=".1s"
                                 style="visibility: visible; animation-delay: 0.1s; animation-name: zoomIn;">
