fonts size updated in different screen resolution

--- a/index.html
+++ b/index.html
@@ -122,14 +122,14 @@
     <!--========== PAGE LAYOUT ==========-->
     <!-- Empresa -->
     <div id="empresa">
-        <div class="content-lg container">
+        <div class="content-lg company container">
             <div class="row margin-b-20">
-                <div class="col-sm-6">
+                <div class="col-sm-12">
                     <h2>Empresa</h2>
                 </div>
             </div>
-            <div class="row">
-                <div class="wow fadeInLeft animated" data-wow-duration=".3" data-wow-delay=".1s"
+            <div class="row img-text-container">
+                <div class="wow fadeInLeft animated text" data-wow-duration=".3" data-wow-delay=".1s"
                     style="visibility: visible; animation-delay: 0.1s; animation-name: fadeInLeft;">
                     <div class="col-sm-6 sm-margin-b-50">
                         <div class="margin-b-30">
@@ -150,9 +150,9 @@
                             de nuestro oficial de cuentas.</p>
                     </div>
                 </div>
-                <div class="wow fadeInRight animated" data-wow-duration=".3" data-wow-delay=".1s"
+                <div class="wow fadeInRight animated img" data-wow-duration=".3" data-wow-delay=".1s"
                     style="visibility: visible; animation-delay: 0.1s; animation-name: fadeInRight;">
-                    <div class="col-sm-5 col-sm-offset-1">
+                    <div class="col-sm-6">
                         <img class="img-responsive" src="img/empresa/multi-plataforma.png" alt="multi-plataforma">
                     </div>
                 </div>
