--- a/index.html
+++ b/index.html
@@ -46,30 +46,42 @@
                     <!-- Logo -->
                     <div class="logo">
                         <a class="logo-wrap" href="index.html">
-                            <img class="logo-img logo-img-main" src="img/logo.png" alt="Asentus Logo">
-                            <img class="logo-img logo-img-active" src="img/logo-dark.png" alt="Asentus Logo">
+                            <img class="logo-img" src="img/logo-grops.png" alt="Asentus Logo">
                         </a>
                     </div>
                     <!-- End Logo -->
                 </div>
 
                 <!-- Collect the nav links, forms, and other content for toggling -->
-                <div class="collapse navbar-collapse nav-collapse">
-                    <div class="menu-container">
-                        <ul class="navbar-nav navbar-nav-left">
-                            <li class="nav-item"><a class="nav-item-child nav-item-hover active"
-                                    href=#empresa>Empresa</a></li>
-                            <li class="nav-item"><a class="nav-item-child nav-item-hover" href=#servicios>Servicios</a>
-                            </li>
-                            <li class="nav-item"><a class="nav-item-child nav-item-hover" href=#contacto>Contacto</a>
-                            </li>
-                            <li class="nav-item"><a class="nav-item-child nav-item-hover" href=#faq>FAQ</a></li>
-                            <li class="nav-item"><a class="nav-item-child nav-item-hover" href=#ingresar>Ingresar</a>
-                            </li>
-                        </ul>
-                    </div>
+                <div class="collapse navbar-collapse">
+                    <ul class="navbar-nav">
+                        <li class="nav-item"><a class="nav-item-child nav-item-hover active"
+                                href=#empresa>Empresa</a></li>
+                        <li class="nav-item"><a class="nav-item-child nav-item-hover" href=#servicios>Servicios</a>
+                        </li>
+                        <li class="nav-item"><a class="nav-item-child nav-item-hover" href=#contacto>Contacto</a>
+                        </li>
+                        <li class="nav-item"><a class="nav-item-child nav-item-hover" href=#faq>FAQ</a></li>
+                        <li class="nav-item"><a class="nav-item-child nav-item-hover" href=#ingresar>Ingresar</a>
+                        </li>
+                    </ul>
                 </div>
                 <!-- End Navbar Collapse -->
+
+                <div class="menu-container social-media">
+                    <!-- Logo -->
+                    <div class="social-media">
+                        <div class="social-media-wrap">
+                            <a class="social-media-img" href="index.html">
+                                <img class="social-media-img" src="img/header/linkedln.svg" alt="Asentus Logo">
+                            </a>
+                            <a class="social-media-img" href="index.html">
+                                <img class="social-media-img" src="img/header/whatsapp.svg" alt="Asentus Logo">
+                            </a>
+                    </div>
+                    </div>
+                    <!-- End Logo -->
+                </div>
             </div>
         </nav>
         <!-- Navbar -->
@@ -83,35 +95,48 @@
             <ol class="carousel-indicators">
                 <li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
                 <li data-target="#carousel-example-generic" data-slide-to="1"></li>
+                <li data-target="#carousel-example-generic" data-slide-to="2"></li>
             </ol>
         </div>
 
         <!-- Wrapper for slides -->
         <div class="carousel-inner" role="listbox">
             <div class="item active">
-                <img class="img-responsive" src="img/1920x1080/01.jpg" alt="Slider Image">
+                <img class="img-responsive" src="img/1920x1080/1.png" alt="Slider Image">
                 <div class="container">
                     <div class="carousel-centered">
                         <div class="margin-b-40">
                             <h1 class="carousel-title">GROPS</h1>
-                            <p>Soluciones integrales para el abastecimiento <br />
+                            <h4 class="carousel-sub-title">Soluciones integrales para el abastecimiento <br />
                                 y la gestión energetica
-                            </p>
+                            </h4>
                         </div>
                     </div>
                 </div>
             </div>
             <div class="item">
-                <img class="img-responsive" src="img/1920x1080/02.jpg" alt="Slider Image">
+                <img class="img-responsive" src="img/1920x1080/2.png" alt="Slider Image">
                 <div class="container">
                     <div class="carousel-centered">
                         <div class="margin-b-40">
                             <h1 class="carousel-title">GROPS</h1>
-                            <p>Soluciones integrales para el abastecimiento <br />
+                            <h4 class="carousel-sub-title">Soluciones integrales para el abastecimiento <br />
                                 y la gestión energetica
-                            </p>
+                            </h4>
                         </div>
-                        <a href="#" class="btn-theme btn-theme-sm btn-white-brd text-uppercase">Explorar</a>
+                    </div>
+                </div>
+            </div>
+            <div class="item">
+                <img class="img-responsive" src="img/1920x1080/3.png" alt="Slider Image">
+                <div class="container">
+                    <div class="carousel-centered">
+                        <div class="margin-b-40">
+                            <h1 class="carousel-title">GROPS</h1>
+                            <h4 class="carousel-sub-title">Soluciones integrales para el abastecimiento <br />
+                                y la gestión energetica
+                            </h4>
+                        </div>
                     </div>
                 </div>
             </div>
