containers size increased

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     <header class="header navbar-fixed-top">
         <!-- Navbar -->
         <nav class="navbar" role="navigation">
-            <div class="container">
+            <div class="container container-full-width">
                 <!-- Brand and toggle get grouped for better mobile display -->
                 <div class="menu-container">
                     <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".nav-collapse">
@@ -90,7 +90,7 @@
 
     <!--========== SLIDER ==========-->
     <div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
-        <div class="container">
+        <div class="container container-full-width">
             <!-- Indicators -->
             <ol class="carousel-indicators">
                 <li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
@@ -103,25 +103,24 @@
         <div class="carousel-inner" role="listbox">
             <div class="item active">
                 <img class="img-responsive" src="img/1920x1080/1.png" alt="Slider Image">
-                <div class="container">
+                <div class="container container-full-width">
                     <div class="carousel-centered">
                         <div class="margin-b-40">
-                            <h1 class="carousel-title">GROPS</h1>
-                            <h4 class="carousel-sub-title">Soluciones integrales para el abastecimiento <br />
-                                y la gestión energetica
+                            <h1 class="carousel-title">Ingeniería y proyectos en el campo de la energīa</h1>
+                            <h4 class="carousel-sub-title">Desarrollamos auditorías y generamos opciones de optimización.
                             </h4>
                         </div>
                     </div>
                 </div>
             </div>
-            <div class="item">
+            <!-- <div class="item">
                 <img class="img-responsive" src="img/1920x1080/2.png" alt="Slider Image">
-                <div class="container">
+                <div class="container container-full-width">
                     <div class="carousel-centered">
                         <div class="margin-b-40">
-                            <h1 class="carousel-title">GROPS</h1>
-                            <h4 class="carousel-sub-title">Soluciones integrales para el abastecimiento <br />
-                                y la gestión energetica
+                            <h1 class="carousel-title">gestion de energía</h1>
+                            <h4 class="carousel-sub-title">Generamos lineamientos para la implementación de un sistema de gestión energética 
+                                que permite optimizar los recursos e incrementa la competividad de su empresa.
                             </h4>
                         </div>
                     </div>
@@ -129,17 +128,17 @@
             </div>
             <div class="item">
                 <img class="img-responsive" src="img/1920x1080/3.png" alt="Slider Image">
-                <div class="container">
+                <div class="container container-full-width">
                     <div class="carousel-centered">
                         <div class="margin-b-40">
-                            <h1 class="carousel-title">GROPS</h1>
-                            <h4 class="carousel-sub-title">Soluciones integrales para el abastecimiento <br />
-                                y la gestión energetica
+                            <h1 class="carousel-title">Contratación de insumos energéticos</h1>
+                            <h4 class="carousel-sub-title">Aseguramos un precio competivo y aseguramos un proceso  totalmente seguro 
+                                eficiente y transparente
                             </h4>
                         </div>
                     </div>
                 </div>
-            </div>
+            </div> -->
         </div>
     </div>
     <!--========== SLIDER ==========-->
@@ -147,13 +146,13 @@
     <!--========== PAGE LAYOUT ==========-->
     <!-- Empresa -->
     <div id="empresa">
-        <div class="content-lg company container">
+        <div class="content-lg company container container-full-width">
             <div class="row margin-b-20">
                 <div class="col-sm-12">
                     <h2>Empresa</h2>
                 </div>
             </div>
-            <div class="row img-text-container">
+            <div class="row img-text-container container-full-width">
                 <div class="wow fadeInLeft animated text" data-wow-duration=".3" data-wow-delay=".1s"
                     style="visibility: visible; animation-delay: 0.1s; animation-name: fadeInLeft;">
                     <div class="col-sm-6 sm-margin-b-50">
@@ -187,7 +186,7 @@
     <!-- End Empresa -->
     <div id="servicios" class="servicios">
         <div class="bg-color-sky-light" data-auto-height="true">
-            <div class="container g-margin-t-15--xs g-padding-y-80--xs g-padding-y-125--sm">
+            <div class="container container-full-width g-margin-t-15--xs g-padding-y-80--xs g-padding-y-125--sm">
                 <div class="row margin-b-40">
                     <div class="col-sm-12">
                         <h2>Servicios</h2>
@@ -278,7 +277,7 @@
     <!-- End Servicios-->
     <!-- FAQ1 -->
     <div id="faq" class="faq">
-        <div class="content-lg container">
+        <div class="content-lg container container-full-width">
             <div class="row g-margin-b-40--xs">
                 <div class="col-sm-12">
                     <h2>FAQs</h2>
@@ -288,7 +287,7 @@
                 <div class="wow fadeInRight animated" data-wow-duration=".3" data-wow-delay=".1s"
                     style="visibility: visible; animation-delay: 0.1s; animation-name: fadeInLeft;">
                     <div class="col-sm-6 sm-margin-b-50">
-                        <div class="img-title-container">
+                        <div class="img-title-container container-full-width">
                             <div class="gestion-energetica g-margin-b-30--xs">
                                 <img class="img-responsive" src="img/faq/1_menu/gestion-energetica.png"
                                     alt="gestion-energetica">
@@ -307,7 +306,7 @@
                 <div class="wow fadeInLeft animated" data-wow-duration=".3" data-wow-delay=".1s"
                     style="visibility: visible; animation-delay: 0.1s; animation-name: fadeInRight;">
                     <div class="col-sm-6 sm-margin-b-50">
-                        <div class="img-title-container">
+                        <div class="img-title-container container-full-width">
                             <div class="integra-energia g-margin-b-30--xs">
                                 <img class="img-responsive" src="img/faq/1_menu/integra-energia.png" alt="Integra energia">
                             </div>
@@ -330,7 +329,7 @@
     <!-- FAQ2 -->
     <div id="FAQ2:Plataforma-Gestion-Energetica-Beneficios">
         <div class="bg-color-sky-light benefits" data-auto-height="true">
-            <div class="content-lg container">
+            <div class="content-lg container container-full-width">
                 <div class="row margin-b-40">
                     <div class="col-sm-12">
                         <h2>Plataforma Gestión Energética - Beneficios</h2>
@@ -493,7 +492,7 @@
     <!-- FAQ3 -->
     <div id="FAQ3:what-used-for">
         <div class="what-used-for" data-auto-height="true">
-            <div class="content-lg container">
+            <div class="content-lg container container-full-width">
                 <div class="row margin-b-40">
                     <div class="col-sm-12">
                         <h2>Plataforma Gestión Energética - ¿Para qué se utiliza?</h2>
@@ -570,7 +569,7 @@
     <!-- FAQ4 -->
     <div id="FAQ4:how-works">
         <div class="how-works bg-color-sky-light" data-auto-height="true">
-            <div class="content-lg container">
+            <div class="content-lg container container-full-width">
                 <div class="row margin-b-20">
                     <div class="col-sm-12">
                         <h2>Plataforma Gestión Energética - ¿Cómo funciona?</h2>
@@ -589,7 +588,7 @@
     <!-- End FAQ4 -->
     <!-- FAQ5 -->
     <div id="FAQ5:requirenments-to-access-platform">
-        <div class="requirenments-to-access-platform content-lg container g-margin-t-15--xs g-padding-y-80--xs g-padding-y-125--sm">
+        <div class="requirenments-to-access-platform content-lg container container-full-width g-margin-t-15--xs g-padding-y-80--xs g-padding-y-125--sm">
             <div class="row margin-b-40">
                 <div class="col-sm-12">
                     <h2>Plataforma Gestión Energética - ¿Qué se necesita para acceder a la plataforma?</h2>
@@ -643,7 +642,7 @@
     <!-- FAQ5 -->
     <!-- FAQ6 -->
     <div id="FAQ6:Plataforma-Integra-Energia-Beneficios">
-        <div class="content-lg container">
+        <div class="content-lg container container-full-width">
             <div class="row margin-b-20">
                 <div class="col-sm-12">
                     <h2>Plataforma Integra Energía - Beneficios</h2>
@@ -694,7 +693,7 @@
     <!-- End FAQ7 -->
     <!-- FAQ8 -->
     <div id="FAQ8:Plataforma-Integra-Energia-Como-funciona">
-        <div class="content-lg container">
+        <div class="content-lg container container-full-width">
             <div class="row margin-b-20">
                 <div class="col-sm-12">
                     <h2>Plataforma Gestión Energética - ¿Cómo funciona?</h2>
@@ -711,7 +710,7 @@
     <!-- End FAQ8 -->
     <!-- FAQ9 -->
     <div id="FAQ9:Plataforma-Integra-Energia-que-se-necesita-para-acceder-a-la-plataforma">
-        <div class="container g-margin-t-15--xs g-padding-y-80--xs g-padding-y-125--sm">
+        <div class="container container-full-width g-margin-t-15--xs g-padding-y-80--xs g-padding-y-125--sm">
             <div class="row margin-b-40">
                 <div class="col-sm-12">
                     <h2>Plataforma Integra Energía - ¿Qué se necesita para acceder a la plataforma?</h2>
@@ -758,7 +757,7 @@
     <footer class="footer">
         <!-- Links -->
         <div class="footer-seperator">
-            <div class="content-lg container">
+            <div class="content-lg container container-full-width">
                 <div class="row">
                     <div class="col-sm-1 sm-margin-b-30">
                 </div>
@@ -779,7 +778,7 @@
         <!-- End Links -->
 
         <!-- Copyright -->
-        <div class="content container footer-copyright">
+        <div class="content container container-full-width footer-copyright">
             <div class="row">
                 <!-- <div class="col-xs-6">
                         <img class="img-responsive footer-logo" src="img/logo.png" alt="Grops log">
