--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                 <div class="collapse navbar-collapse">
                     <ul class="navbar-nav">
                         <li class="nav-item"><a class="nav-item-child nav-item-hover active"
-                                href=#empresa>Empresa</a></li>
+                                href=#company>Empresa</a></li>
                         <li class="nav-item"><a class="nav-item-child nav-item-hover" href=#servicios>Servicios</a>
                         </li>
                         <li class="nav-item"><a class="nav-item-child nav-item-hover" href=#contacto>Contacto</a>
@@ -134,40 +134,20 @@
 
     <!--========== PAGE LAYOUT ==========-->
     <!-- Empresa -->
-    <div id="empresa">
-        <div class="content-lg company container">
-            <div class="row margin-b-20">
-                <div class="col-sm-12">
-                    <h2>Empresa</h2>
-                </div>
+    <div id="company" class="content-lg company container">
+        <div class="row">
+            <div class="wow fadeInLeft animated text col-12 col-sm-6 sm-margin-b-50" data-wow-duration=".3" data-wow-delay=".1s"
+                style="visibility: visible; animation-delay: 0.1s; animation-name: fadeInLeft;">
+                <p class="margin-b-30">Somos una empresa especializada en el sector energético, enfocada en los procesos de abastecimiento, control de gestión e ingeniería y desarrollo de proyectos conformada por un equipo de profesionales con extensa trayectoria y experiencia en el rubro.</p>
+                <p>Brindamos soluciones integrales, inteligentes y tecnológicas
+                    para hogares, comercios, e industrias, a través de nuestras
+                    plataformas de gestión y licitación de energía, con el apoyo
+                    de nuestro oficial de cuentas.</p>
             </div>
-            <div class="row img-text-container">
-                <div class="wow fadeInLeft animated text" data-wow-duration=".3" data-wow-delay=".1s"
-                    style="visibility: visible; animation-delay: 0.1s; animation-name: fadeInLeft;">
-                    <div class="col-sm-6 sm-margin-b-50">
-                        <div class="margin-b-30">
-                            <p>Empresa especializada en el sector energético. Conformada
-                                por un equipo de profesionales, con extensa trayectoria en
-                                empresas de primera línea del sector y en las distintas etapas
-                                de la cadena de comercialización, que aportan todo su
-                                conocimiento del mercado energético argentino para
-                                desarrollar las mejores soluciones a las necesidades nuestros
-                                clientes.
-                                Nuestro objetivo es convertirnos en aliados estratégicos de
-                                nuestros clientes y proveedores, construyendo relaciones
-                                estables y sustentables en el largo plazo.</p>
-                        </div>
-                        <p>Brindamos soluciones integrales, inteligentes y tecnológicas
-                            para hogares, comercios, e industrias, a través de nuestras
-                            plataformas de gestión y licitación de energía, con el apoyo
-                            de nuestro oficial de cuentas.</p>
-                    </div>
-                </div>
-                <div class="wow fadeInRight animated img" data-wow-duration=".3" data-wow-delay=".1s"
-                    style="visibility: visible; animation-delay: 0.1s; animation-name: fadeInRight;">
-                    <div class="col-sm-6">
-                        <img class="img-responsive" src="img/empresa/multi-plataforma.png" alt="multi-plataforma">
-                    </div>
+            <div class="wow fadeInRight animated col-12 col-sm-6" data-wow-duration=".3" data-wow-delay=".1s"
+                style="visibility: visible; animation-delay: 0.1s; animation-name: fadeInRight;">
+                <div class="company-img-container">
+                    <img class="img-responsive" src="img/empresa/company.png" alt="multi-plataforma">
                 </div>
             </div>
         </div>
